--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,17 @@ DB_DATABASE_NAME=makaplatv4
 DB_USERNAME=
 DB_PASSWORD=
 
+# platv4连接
+DB_PLAT_CONNECTION=plat
+# 读库
+DB_PLAT_READ_HOST=
+# 写库
+DB_PLAT_WRITE_HOST=
+DB_PLAT_DRIVER=mysql
+DB_PLAT_DATABASE_NAME=makaplatv4
+DB_PLAT_USERNAME=
+DB_PLAT_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
