--- a/.env.example
+++ b/.env.example
@@ -34,7 +34,9 @@ QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
+REDIS_USER=null
 REDIS_PORT=6379
+REDIS_DEFAULT_DB=0
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
