--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "encore/laravel-admin": "1.5.*",
         "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "^6.3",
+        "hhxsv5/laravel-s": "~1.0",
         "illuminate/redis": "^5.5",
         "imangazaliev/didom": "^1.12",
         "laravel/framework": "5.5.*",
