--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "lvsongdong/rapyd": "*",
+        "naux/sendcloud": "^1.1",
         "predis/predis": "^1.1"
     },
     "require-dev": {
