[ADD][Notice] Laravel-Wechat Package
> Need Composer install First

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,16 @@ ALI_OSS_PLAT_ACCESS_KEY=
 ALI_OSS_PLAT_ACCESS_SECRET=
 ALI_OSS_PLAT_ENDPOINT=
 ALI_OSS_PLAT_VIEW_DOMAIN=
+
+# 微信
+## MAKA测试号
+MAKA_TEST_WECHAT_APP_ID=
+MAKA_TEST_WECHAT_APP_SECRET=
+MAKA_TEST_WECHAT_TOKEN=
+MAKA_TEST_WECHAT_AES_KEY=
+
+## yys 测试号
+YYS_TEST_WECHAT_APP_ID=
+YYS_TEST_WECHAT_APP_SECRET=
+YYS_TEST_WECHAT_TOKEN=
+YYS_TEST_WECHAT_AES_KEY=
