--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "laravel/tinker": "~1.0",
         "lvsongdong/rapyd": "*",
         "naux/sendcloud": "^1.1",
+        "overtrue/laravel-wechat": "~4.0",
         "predis/predis": "^1.1"
     },
     "require-dev": {
