--story= --task= --bug= --user=lvsongdong --message=WeChat APPID

--- a/.env.example
+++ b/.env.example
@@ -69,3 +69,9 @@ YYS_TEST_WECHAT_APP_ID=
 YYS_TEST_WECHAT_APP_SECRET=
 YYS_TEST_WECHAT_TOKEN=
 YYS_TEST_WECHAT_AES_KEY=
+
+## 公众号
+WECHAT_OFFICIAL_ACCOUNT_APPID=
+WECHAT_OFFICIAL_ACCOUNT_SECRET=
+WECHAT_OFFICIAL_ACCOUNT_TOKEN=
+WECHAT_OFFICIAL_ACCOUNT_AES_KEY=
